syntax = "proto3";

package machine;

import "google/protobuf/empty.proto";
import "machine/common.proto";
import "machine/machine.proto";
import "machine/maintenance.proto";
import "machine/document.proto";
import "machine/transfer.proto";

service MachineService {
    rpc findAllMachines (Query) returns (MachineList) {}
    rpc findMachineById (Id) returns (Machine) {}
    rpc findMachineByCode (Name) returns (Machine) {}
    rpc countMachines (Query) returns (Count) {}
    rpc createMachine (CreateMachineInput) returns (Machine) {}
    rpc updateMachine (UpdateMachineInput) returns (Machine) {}
    rpc destroyMachine (Query) returns (Count) {}

    // Maintenance
    rpc findAllMaintenanceRecords (Query) returns (MaintenanceRecordList) {}
    rpc findMaintenanceRecordById (Id) returns (MaintenanceRecord) {}
    rpc countMaintenanceRecords (Query) returns (Count) {}
    rpc createMaintenanceRecord (CreateMaintenanceRecordInput) returns (MaintenanceRecord) {}
    rpc updateMaintenanceRecord (UpdateMaintenanceRecordInput) returns (MaintenanceRecord) {}
    rpc destroyMaintenanceRecord (Query) returns (Count) {}

    // Documents
    rpc findAllMachineDocuments (Query) returns (MachineDocumentList) {}
    rpc findMachineDocumentById (Id) returns (MachineDocument) {}
    rpc countMachineDocuments (Query) returns (Count) {}
    rpc createMachineDocument (CreateMachineDocumentInput) returns (MachineDocument) {}
    rpc updateMachineDocument (UpdateMachineDocumentInput) returns (MachineDocument) {}
    rpc destroyMachineDocument (Query) returns (Count) {}

    // Transfers
    rpc findAllTransfers (Query) returns (TransferList) {}
    rpc findTransferById (Id) returns (Transfer) {}
    rpc countTransfers (Query) returns (Count) {}
    rpc createTransfer (CreateTransferInput) returns (Transfer) {}
    rpc updateTransfer (UpdateTransferInput) returns (Transfer) {}
    rpc destroyTransfer (Query) returns (Count) {}
}
