syntax = "proto3";

package master_data;

import "common/commons.proto";

// Manufacturer Country - Nước sản xuất
message ManufacturerCountry {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string createdBy = 7;
  string updatedBy = 8;
  int32 version = 9;
  int32 isActive = 10;
}

message CreateManufacturerCountryInput {
  string code = 1;
  string name = 2;
  int32 sortOrder = 3;
  string createdBy = 4;
}

message UpdateManufacturerCountryInput {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string updatedBy = 5;
}

message ManufacturerCountryList {
  repeated ManufacturerCountry data = 1;
}
